# Market-Intelligence

./: .env.example  Makefile  README.md  manage.py  pipeline.py  pyproject.toml  requirements.txt
Config/base/: base.py  urls.py  wsgi.py
Data/data/: AAPL_processed.csv  AAPL_raw.csv  AMD_processed.csv  AMD_raw.csv  AMZN_processed.csv  AMZN_raw.csv  BTC-USD_processed.csv  BTC-USD_raw.csv  ETH-USD_processed.csv  ETH-USD_raw.csv  GOOGL_processed.csv  GOOGL_raw.csv  META_processed.csv  META_raw.csv  MSFT_processed.csv  MSFT_raw.csv  NFLX_processed.csv  NFLX_raw.csv  NVDA_processed.csv  NVDA_raw.csv  QQQ_processed.csv  QQQ_raw.csv  SPY_processed.csv  SPY_raw.csv  TSLA_processed.csv  TSLA_raw.csv
app/: __init__.py
app/analytics/: data_fetcher.py  processor.py  urls.py  views.py
config/: pipeline_config.yaml
streamlit_app/: app.py
